0.11.0/_sources/reference/dipy.io.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`io`
=========
.. automodule:: dipy.io

.. currentmodule:: dipy.io
.. autosummary::

   Dpy
   load_pickle
   orientation_from_string
   orientation_to_string
   ornt_mapping
   read_bvals_bvecs
   read_bvec_file
   reorient_on_axis
   reorient_vectors
   save_pickle

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io.bvectxt`
-------------------------
.. automodule:: dipy.io.bvectxt

.. currentmodule:: dipy.io.bvectxt
.. autosummary::

   orientation_from_string
   orientation_to_string
   ornt_mapping
   read_bvec_file
   reorient_on_axis
   reorient_vectors
   splitext

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io.dpy`
---------------------
.. automodule:: dipy.io.dpy

.. currentmodule:: dipy.io.dpy
.. autosummary::

   Dpy
   optional_package
   setup_module

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io.gradients`
---------------------------
.. automodule:: dipy.io.gradients

.. currentmodule:: dipy.io.gradients
.. autosummary::

   read_bvals_bvecs
   splitext

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io.pickles`
-------------------------
.. automodule:: dipy.io.pickles

.. currentmodule:: dipy.io.pickles
.. autosummary::

   load_pickle
   save_pickle

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io.trackvis`
--------------------------
.. automodule:: dipy.io.trackvis

.. currentmodule:: dipy.io.trackvis
.. autosummary::

   save_trk


.. currentmodule:: dipy.io


:class:`Dpy`
~~~~~~~~~~~~


.. autoclass:: Dpy
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

load_pickle
~~~~~~~~~~~

.. autofunction:: load_pickle

orientation_from_string
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: orientation_from_string

orientation_to_string
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: orientation_to_string

ornt_mapping
~~~~~~~~~~~~

.. autofunction:: ornt_mapping

read_bvals_bvecs
~~~~~~~~~~~~~~~~

.. autofunction:: read_bvals_bvecs

read_bvec_file
~~~~~~~~~~~~~~

.. autofunction:: read_bvec_file

reorient_on_axis
~~~~~~~~~~~~~~~~

.. autofunction:: reorient_on_axis

reorient_vectors
~~~~~~~~~~~~~~~~

.. autofunction:: reorient_vectors

save_pickle
~~~~~~~~~~~

.. autofunction:: save_pickle


.. currentmodule:: dipy.io.bvectxt

orientation_from_string
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: orientation_from_string

orientation_to_string
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: orientation_to_string

ornt_mapping
~~~~~~~~~~~~

.. autofunction:: ornt_mapping

read_bvec_file
~~~~~~~~~~~~~~

.. autofunction:: read_bvec_file

reorient_on_axis
~~~~~~~~~~~~~~~~

.. autofunction:: reorient_on_axis

reorient_vectors
~~~~~~~~~~~~~~~~

.. autofunction:: reorient_vectors

splitext
~~~~~~~~

.. autofunction:: splitext


.. currentmodule:: dipy.io.dpy


:class:`Dpy`
~~~~~~~~~~~~


.. autoclass:: Dpy
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

optional_package
~~~~~~~~~~~~~~~~

.. autofunction:: optional_package

setup_module
~~~~~~~~~~~~

.. autofunction:: setup_module


.. currentmodule:: dipy.io.gradients

read_bvals_bvecs
~~~~~~~~~~~~~~~~

.. autofunction:: read_bvals_bvecs

splitext
~~~~~~~~

.. autofunction:: splitext


.. currentmodule:: dipy.io.pickles

load_pickle
~~~~~~~~~~~

.. autofunction:: load_pickle

save_pickle
~~~~~~~~~~~

.. autofunction:: save_pickle


.. currentmodule:: dipy.io.trackvis

save_trk
~~~~~~~~

.. autofunction:: save_trk

